# macleaner

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LAUNCH.md  LICENSE  README.md  spec.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
bar/: Cargo.toml  README.md  check_types  spec.md
bar/src/: actions.rs  barconfig.rs  bridge.rs  bundle.rs  disk.rs  loginitem.rs  main.rs  mem.rs  panel.html  panel.rs  state.rs  ui.rs
daemon/: .gitignore  Cargo.toml  README.md
daemon/deploy/: README.md
daemon/src/: config.rs  disk.rs  launchd.rs  main.rs  report.rs  runner.rs  safety.rs
daemon/src/cleaners/: mod.rs
deploy/: README.md
docs/: SIGNING.md
scripts/: notarize.sh  package.sh
src/: actions.rs  barconfig.rs  bridge.rs  disk.rs  launchd.rs  main.rs  panel.html  panel.rs  report.rs  state.rs  ui.rs
src/cleaners/: mod.rs
