[package]
name = "macleaner"
version = "0.1.0"
edition = "2021"
description = "Safe, idempotent daily disk cleaner for macOS with a launchd LaunchAgent."
license = "MIT"

[[bin]]
name = "macleaner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
anyhow = "1"
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
