[package]
name = "macleaner-bar"
version = "0.1.0"
edition = "2021"
description = "macOS menu-bar companion for macleaner (disk free space + clean controls, SMAppService login item)."
license = "MIT"

[[bin]]
name = "macleaner-bar"
path = "src/main.rs"

[dependencies]
tray-icon = "0.24"
tao = "0.35"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["block2", "NSNotification"] }
objc2-service-management = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
libc = "0.2"
objc2-app-kit = { version = "0.3.2", features = ["NSEvent", "block2"] }
objc2-web-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
serde_json = "1.0.150"
block2 = "0.6.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
